--- a/AccountingBackend.Api/AccountingBackend.Api.csproj
+++ b/AccountingBackend.Api/AccountingBackend.Api.csproj
@@ -1,19 +1,18 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
-
   <PropertyGroup>
     <TargetFramework>netcoreapp2.2</TargetFramework>
     <AspNetCoreHostingModel>InProcess</AspNetCoreHostingModel>
+    <GenerateDocumentationFile>true</GenerateDocumentationFile>
   </PropertyGroup>
-
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.App" />
+    <PackageReference Include="Microsoft.AspNetCore.App"/>
+    <PackageReference Include="NSwag.AspNetCore" Version="12.2.3"/>
+    <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="6.0.1"/>
   </ItemGroup>
-
   <ItemGroup>
-    <ProjectReference Include="..\AccountingBackend.Commons\AccountingBackend.Commons.csproj" />
-    <ProjectReference Include="..\AccountingBackend.Infrastructure\AccountingBackend.Infrastructure.csproj" />
-    <ProjectReference Include="..\AccountingBackend.Persistance\AccountingBackend.Persistance.csproj" />
-    <ProjectReference Include="..\AccountingBackend.Application\AccountingBackend.Application.csproj" />
+    <ProjectReference Include="..\AccountingBackend.Commons\AccountingBackend.Commons.csproj"/>
+    <ProjectReference Include="..\AccountingBackend.Infrastructure\AccountingBackend.Infrastructure.csproj"/>
+    <ProjectReference Include="..\AccountingBackend.Persistance\AccountingBackend.Persistance.csproj"/>
+    <ProjectReference Include="..\AccountingBackend.Application\AccountingBackend.Application.csproj"/>
   </ItemGroup>
-
 </Project>
