--- a/AccountingBackend.Application/AccountingBackend.Application.csproj
+++ b/AccountingBackend.Application/AccountingBackend.Application.csproj
@@ -3,6 +3,12 @@
     <ProjectReference Include="..\AccountingBackend.Domain\AccountingBackend.Domain.csproj"/>
     <ProjectReference Include="..\AccountingBackend.Commons\AccountingBackend.Commons.csproj"/>
   </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="MediatR" Version="6.0.0"/>
+    <PackageReference Include="FluentValidation" Version="8.2.3"/>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.2.4"/>
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="2.2.0"/>
+  </ItemGroup>
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
