added jwt service

--- a/AccountingBackend.Api/appsettings.json
+++ b/AccountingBackend.Api/appsettings.json
@@ -4,5 +4,11 @@
 			"Default": "Warning"
 		}
 	},
+	"JwtSettings": {
+		"key": "`1qscvfrewdthnjuilkkjhfdsaafjldkk5kw803",
+		"issuer": "http://localhost:5000",
+		"audience": "AccountingFrontend",
+		"minutesToExpiration": "30"
+	},
 	"AllowedHosts": "*"
 }
