--- a/AccountingBackend.Api/AccountingBackend.Api.csproj
+++ b/AccountingBackend.Api/AccountingBackend.Api.csproj
@@ -10,6 +10,7 @@
     <PackageReference Include="NSwag.AspNetCore" Version="12.2.3"/>
     <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="6.0.1"/>
     <PackageReference Include="FluentValidation.AspNetCore" Version="8.3.0"/>
+    <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.2.0"/>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\AccountingBackend.Commons\AccountingBackend.Commons.csproj"/>
@@ -17,5 +18,4 @@
     <ProjectReference Include="..\AccountingBackend.Persistance\AccountingBackend.Persistance.csproj"/>
     <ProjectReference Include="..\AccountingBackend.Application\AccountingBackend.Application.csproj"/>
   </ItemGroup>
-  
 </Project>
