--- a/AccountingBackend.Api/AccountingBackend.Api.csproj
+++ b/AccountingBackend.Api/AccountingBackend.Api.csproj
@@ -11,6 +11,7 @@
     <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="6.0.1"/>
     <PackageReference Include="FluentValidation.AspNetCore" Version="8.3.0"/>
     <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.2.0"/>
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Api.Analyzers" Version="2.2.0"/>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\AccountingBackend.Commons\AccountingBackend.Commons.csproj"/>
