--- a/AccountingBackend.Application.Test/AccountingBackend.Application.Test.csproj
+++ b/AccountingBackend.Application.Test/AccountingBackend.Application.Test.csproj
@@ -9,6 +9,7 @@
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.0"/>
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="2.2.0"/>
     <PackageReference Include="Moq" Version="4.10.1"/>
+    <PackageReference Include="FluentAssertions" Version="5.6.0"/>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\AccountingBackend.Application\AccountingBackend.Application.csproj"/>
