--- a/AccountingBackend.Api/appsettings.json
+++ b/AccountingBackend.Api/appsettings.json
@@ -1,4 +1,8 @@
 {
+	"ConnectionString": {
+		"AccountingDatabase": "server=localhost;user=admin;password=admin;port=3306;database=smart_accounting;",
+		"SecurityDatabase": "server=localhost;user=admin;password=admin;port=3306;database=smart_security;"
+	},
 	"Logging": {
 		"LogLevel": {
 			"Default": "Warning"
