--- a/AccountingBackend.Api.Test/AccountingBackend.Api.Test.csproj
+++ b/AccountingBackend.Api.Test/AccountingBackend.Api.Test.csproj
@@ -8,8 +8,18 @@
     <PackageReference Include="xunit" Version="2.4.0"/>
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.0"/>
     <PackageReference Include="Moq" Version="4.10.1"/>
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="2.2.0"/>
+
+    <PackageReference Include="Microsoft.AspNetCore.App"/>
+    <PackageReference Include="FluentAssertions" Version="5.6.0"/>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\AccountingBackend.Api\AccountingBackend.Api.csproj"/>
+    <ProjectReference Include="..\AccountingBackend.Persistance\AccountingBackend.Persistance.csproj"/>
+  </ItemGroup>
+  <ItemGroup>
+    <Reference Include="Microsoft.AspNetCore">
+      <HintPath>/usr/share/dotnet/sdk/NuGetFallbackFolder/microsoft.aspnetcore/2.2.0/lib/netstandard2.0/Microsoft.AspNetCore.dll</HintPath>
+    </Reference>
   </ItemGroup>
 </Project>
