--- a/AccountingBackend.Application/AccountingBackend.Application.csproj
+++ b/AccountingBackend.Application/AccountingBackend.Application.csproj
@@ -1,14 +1,15 @@
 <Project Sdk="Microsoft.NET.Sdk">
   <ItemGroup>
-    <ProjectReference Include="..\AccountingBackend.Domain\AccountingBackend.Domain.csproj" />
-    <ProjectReference Include="..\AccountingBackend.Commons\AccountingBackend.Commons.csproj" />
-    <ProjectReference Include="..\BackendSecurity.Domain\BackendSecurity.Domain.csproj" />
+    <ProjectReference Include="..\AccountingBackend.Domain\AccountingBackend.Domain.csproj"/>
+    <ProjectReference Include="..\AccountingBackend.Commons\AccountingBackend.Commons.csproj"/>
+    <ProjectReference Include="..\BackendSecurity.Domain\BackendSecurity.Domain.csproj"/>
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="MediatR" Version="6.0.0" />
-    <PackageReference Include="FluentValidation" Version="8.2.3" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.2.4" />
-    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="2.2.0" />
+    <PackageReference Include="MediatR" Version="6.0.0"/>
+    <PackageReference Include="FluentValidation" Version="8.2.3"/>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.2.4"/>
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="2.2.0"/>
+    <PackageReference Include="System.Linq.Dynamic.Core" Version="1.0.13"/>
   </ItemGroup>
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
