--- a/AccountingBackend.Application.Test/AccountingBackend.Application.Test.csproj
+++ b/AccountingBackend.Application.Test/AccountingBackend.Application.Test.csproj
@@ -4,14 +4,16 @@
     <IsPackable>false</IsPackable>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.0.1"/>
-    <PackageReference Include="xunit" Version="2.4.0"/>
-    <PackageReference Include="xunit.runner.visualstudio" Version="2.4.0"/>
-    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="2.2.0"/>
-    <PackageReference Include="Moq" Version="4.10.1"/>
-    <PackageReference Include="FluentAssertions" Version="5.6.0"/>
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.0.1" />
+    <PackageReference Include="xunit" Version="2.4.0" />
+    <PackageReference Include="xunit.runner.visualstudio" Version="2.4.0" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="2.2.0" />
+    <PackageReference Include="Moq" Version="4.10.1" />
+    <PackageReference Include="FluentAssertions" Version="5.6.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="2.2.4" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\AccountingBackend.Application\AccountingBackend.Application.csproj"/>
+    <ProjectReference Include="..\AccountingBackend.Application\AccountingBackend.Application.csproj" />
+    <ProjectReference Include="..\AccountingBackend.Persistance\AccountingBackend.Persistance.csproj" />
   </ItemGroup>
 </Project>
