--- a/AccountingBackend.Api.Test/AccountingBackend.Api.Test.csproj
+++ b/AccountingBackend.Api.Test/AccountingBackend.Api.Test.csproj
@@ -4,18 +4,22 @@
     <IsPackable>false</IsPackable>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.0.1"/>
-    <PackageReference Include="xunit" Version="2.4.0"/>
-    <PackageReference Include="xunit.runner.visualstudio" Version="2.4.0"/>
-    <PackageReference Include="Moq" Version="4.10.1"/>
-    <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="2.2.0"/>
+    <PackageReference Include="coverlet.msbuild" Version="2.6.1">
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      <PrivateAssets>all</PrivateAssets>
+    </PackageReference>
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.0.1" />
+    <PackageReference Include="xunit" Version="2.4.0" />
+    <PackageReference Include="xunit.runner.visualstudio" Version="2.4.0" />
+    <PackageReference Include="Moq" Version="4.10.1" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="2.2.0" />
 
-    <PackageReference Include="Microsoft.AspNetCore.App"/>
-    <PackageReference Include="FluentAssertions" Version="5.6.0"/>
+    <PackageReference Include="Microsoft.AspNetCore.App" />
+    <PackageReference Include="FluentAssertions" Version="5.6.0" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\AccountingBackend.Api\AccountingBackend.Api.csproj"/>
-    <ProjectReference Include="..\AccountingBackend.Persistance\AccountingBackend.Persistance.csproj"/>
+    <ProjectReference Include="..\AccountingBackend.Api\AccountingBackend.Api.csproj" />
+    <ProjectReference Include="..\AccountingBackend.Persistance\AccountingBackend.Persistance.csproj" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="Microsoft.AspNetCore">
